<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itmDestino"
        android:icon="@drawable/worldwide"
        android:title="@string/itmDestinos"
        app:showAsAction="always" />
    <item
        android:id="@+id/itmTravel"
        android:icon="@drawable/travel_svgrepo_com"
        android:title="@string/itmTravel"
        app:showAsAction="always" />
    <item
        android:id="@+id/itmReserva"
        android:icon="@drawable/coronavirus_travel_svgrepo_com"
        android:title="@string/itmReserva"
        app:showAsAction="always" />
    <item
        android:id="@+id/itmPlanes"
        android:title="@string/itmPlanes" />
    <item
        android:id="@+id/itmPromociones"
        android:title="@string/itmPromociones" />
</menu>